--- a/src/pitimg.html
+++ b/src/pitimg.html
@@ -80,6 +80,7 @@
         <br><br>
     </div>
     <script>
+        const waitMs = ms => new Promise(res => setTimeout(res, ms));
         function removeURLParams() {
             window.location.href = "/pitimages"
         }
