--- a/src/settings.html
+++ b/src/settings.html
@@ -28,24 +28,23 @@
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h2>Settings</h2><br>
-            <button style="background-color: rgba(0,0,0,0); border: 2px solid gray; color: gray; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="changeTheme()">
+            <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()">
                 <p>Switch Theme</p>
             </button><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 2px solid gray; color: gray; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='clearCookies'">
+            <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='clearCookies'">
                 <p>Reload Roles</p>
             </button><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 2px solid gray; color: gray; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='/'">
+            <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='/'">
                 <p>Back</p>
-            </button><br>
-            <p>DEBUG</p>
+            </button><br><br>
+            <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'">
+                <p>Log Out</p>
+            </button><br><br><br>
             <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="updateSW()">
                 <p>Update SW</p>
             </button><br><br>
             <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='clearCookies'">
                 <p>Reset Cookies</p>
-            </button><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'">
-                <p>Log Out</p>
             </button><br><br>
         </div>
     </div>
