--- a/src/settings.html
+++ b/src/settings.html
@@ -31,21 +31,18 @@
             <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()">
                 <p>Switch Theme</p>
             </button><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='clearCookies'">
-                <p>Reload Roles</p>
-            </button><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='/'">
-                <p>Back</p>
-            </button><br><br>
             <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'">
                 <p>Log Out</p>
             </button><br><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="updateSW()">
+            <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='/'">
+                <p>Back</p>
+            </button><br><br><br><br>
+            <button style="background-color: rgba(0,0,0,0); border: none; color: #f00; padding: 0px; width: 75%;" onclick="updateSW()">
                 <p>Update SW</p>
-            </button><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='clearCookies'">
+            </button>
+            <button style="background-color: rgba(0,0,0,0); border: none; color: #f00; padding: 0px; width: 75%;" onclick="window.location.href='clearCookies'">
                 <p>Reset Cookies</p>
-            </button><br><br>
+            </button>
         </div>
     </div>
     <script>
