--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: flex;"> 
         <div>
