--- a/src/fantasy.html
+++ b/src/fantasy.html
@@ -38,7 +38,7 @@
     </style>
 </head>
 
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div id="canvasParent">
         <canvas id="frcCvs_0" width="128" height="128" style="display: none; position: absolute;"></canvas>
