--- a/src/points.html
+++ b/src/points.html
@@ -31,7 +31,7 @@
     <script src="appinstall.js"></script>
 </head>
 
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div class="container">
         <form>
