--- a/src/submitted.html
+++ b/src/submitted.html
@@ -23,7 +23,7 @@
         }
     </style>
 </head>
-    <body id="body" class="dark-mode">
+    <body class="dark-mode">
         <script>themeHandle()</script>
         <h1 style="color: #FFB600">Submitted!</h1>
         <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
