--- a/src/login.html
+++ b/src/login.html
@@ -22,7 +22,7 @@
         }
     </style>
 </head>
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div class="container">
         <div class="dummy">
