--- a/src/matches.html
+++ b/src/matches.html
@@ -29,7 +29,7 @@
         }
     </style>
 </head>
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: flex;">
         <div class="maincontent">
