--- a/src/pit.html
+++ b/src/pit.html
@@ -19,147 +19,146 @@
     <script src="form.min.js"></script>
 </head>
 
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
-    <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
-            <form action="/submitPit" target="_self" method="POST" enctype="multipart/form-data">
-                <input type="text" value="pit" name="formType" hidden>
-                <br>
-                <h2 class="gameflair1">General Info</h2>
-                <small><a href="topitscout" style="all: unset;">Teams to scout</a></small><br><br>
-                <fieldset>
-                    <label>Event Code</label><br>
-                    <select name="event" id="eventCode">
-                        <option value="CADA">CADA - Sacramento Regional</option>
-                        <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
-                    </select>
-                </fieldset>
-                <!--<fieldset>
-                    <label>Your Name<br></label>
-                    <input type="text" name="name" required>
-                </fieldset>-->
+        <form action="/submitPit" target="_self" method="POST" enctype="multipart/form-data">
+            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
+            <input type="text" value="pit" name="formType" hidden>
+            <br>
+            <h2 class="gameflair1">General Info</h2>
+            <small><a href="topitscout" style="all: unset;">Teams to scout</a></small><br><br>
+            <fieldset>
+                <label>Event Code</label><br>
+                <select name="event" id="eventCode">
+                    <option value="CADA">CADA - Sacramento Regional</option>
+                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                </select>
+            </fieldset>
+            <!--<fieldset>
+                <label>Your Name<br></label>
+                <input type="text" name="name" required>
+            </fieldset>-->
 
-                <fieldset>
-                    <label>Team Number <span id="invalidTeamInput" style="color: red; display: none;">Not in comp!</span><br></label>
-                    <input type="tel" name="team" id="validateTeamInput" required>
-                </fieldset>
+            <fieldset>
+                <label>Team Number <span id="invalidTeamInput" style="color: red; display: none;">Not in comp!</span><br></label>
+                <input type="tel" name="team" id="validateTeamInput" required>
+            </fieldset>
 
-                <h2 class="gameflair1">Pit Scouting</h2>
-                <h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4>
+            <h2 class="gameflair1">Pit Scouting</h2>
+            <h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4>
 
-                <fieldset>
-                    <label>Drive Type<br></label>
-                    <select name="drivetype">
-                        <option value="westcoast">Westcoast</option>
-                        <option value="swerve" selected>Swerve (Like Ours)</option>
-                        <option value="other">Other (Explain in overall)</option>
-                    </select>
-                </fieldset>
-                <fieldset>
-                    <label>Experience<br></label>
-                    <input type="text" name="driveTeam" class="smallerInput"> Days of drive team work<br>
-                    <input placeholder="0 or 1" type="text" name="attended" class="smallerInput"> Attended events
-                </fieldset>
+            <fieldset>
+                <label>Drive Type<br></label>
+                <select name="drivetype">
+                    <option value="westcoast">Westcoast</option>
+                    <option value="swerve" selected>Swerve (Like Ours)</option>
+                    <option value="other">Other (Explain in overall)</option>
+                </select>
+            </fieldset>
+            <fieldset>
+                <label>Experience<br></label>
+                <input type="text" name="driveTeam" class="smallerInput"> Days of drive team work<br>
+                <input placeholder="0 or 1" type="text" name="attended" class="smallerInput"> Attended events
+            </fieldset>
 
-                <input value="0" type="number" name="game1" hidden>
-                <input value="0" type="number" name="game2" hidden>
-                <input value="0" type="number" name="game3" hidden>
-                <input value="0" type="number" name="game4" hidden>
-                <input value="0" type="number" name="game5" hidden>
-                <input value="0" type="number" name="game6" hidden>
-                <input value="0" type="number" name="game7" hidden>
-                <input value="0" type="number" name="game8" hidden>
-                <input value="0" type="number" name="game9" hidden>
-                <input value="0" type="number" name="game10" hidden>
-                <input value="0" type="number" name="game11" hidden>
-                <input value="0" type="number" name="game12" hidden>
-                <input value="0" type="number" name="game13" hidden>
-                <input value="0" type="number" name="game14" hidden>
-                <input value="0" type="number" name="game15" hidden>
-                <input value="0" type="number" name="game16" hidden>
-                <input value="0" type="number" name="game17" hidden>
-                <input value="0" type="number" name="game18" hidden>
-                <input value="0" type="number" name="game19" hidden>
-                <input value="0" type="number" name="game20" hidden>
+            <input value="0" type="number" name="game1" hidden>
+            <input value="0" type="number" name="game2" hidden>
+            <input value="0" type="number" name="game3" hidden>
+            <input value="0" type="number" name="game4" hidden>
+            <input value="0" type="number" name="game5" hidden>
+            <input value="0" type="number" name="game6" hidden>
+            <input value="0" type="number" name="game7" hidden>
+            <input value="0" type="number" name="game8" hidden>
+            <input value="0" type="number" name="game9" hidden>
+            <input value="0" type="number" name="game10" hidden>
+            <input value="0" type="number" name="game11" hidden>
+            <input value="0" type="number" name="game12" hidden>
+            <input value="0" type="number" name="game13" hidden>
+            <input value="0" type="number" name="game14" hidden>
+            <input value="0" type="number" name="game15" hidden>
+            <input value="0" type="number" name="game16" hidden>
+            <input value="0" type="number" name="game17" hidden>
+            <input value="0" type="number" name="game18" hidden>
+            <input value="0" type="number" name="game19" hidden>
+            <input value="0" type="number" name="game20" hidden>
 
-                <fieldset>
-                    <label>Overall assessment<br></label>
-                    <textarea rows="4" cols="38" name="overall"></textarea>
-                </fieldset>
+            <fieldset>
+                <label>Overall assessment<br></label>
+                <textarea rows="4" cols="38" name="overall"></textarea>
+            </fieldset>
 
-                <fieldset>
-                    <label>Images of ROBOT</label><br>
-                    <label>Image 1 - <strong>FRONT</strong></label>
-                    <input type="file" name="image1" accept="image/png, image/jpeg" required><br>
-                    <label>Image 2 - <strong>BACK</strong></label>
-                    <input type="file" name="image2" accept="image/png, image/jpeg" required><br>
-                    <label>Image 3 - <strong>SIDE</strong></label>
-                    <input type="file" name="image3" accept="image/png, image/jpeg" required><br>
-                    <label>Image 4 - <strong>BOTTOM</strong></label>
-                    <input type="file" name="image4" accept="image/png, image/jpeg" required><br>
-                    <label>Image 5 - <strong>SOMETHING ELSE</strong></label>
-                    <input type="file" name="image5" accept="image/png, image/jpeg" required>
-                </fieldset>
+            <fieldset>
+                <label>Images of ROBOT</label><br>
+                <label>Image 1 - <strong>FRONT</strong></label>
+                <input type="file" name="image1" accept="image/png, image/jpeg" required><br>
+                <label>Image 2 - <strong>BACK</strong></label>
+                <input type="file" name="image2" accept="image/png, image/jpeg" required><br>
+                <label>Image 3 - <strong>SIDE</strong></label>
+                <input type="file" name="image3" accept="image/png, image/jpeg" required><br>
+                <label>Image 4 - <strong>BOTTOM</strong></label>
+                <input type="file" name="image4" accept="image/png, image/jpeg" required><br>
+                <label>Image 5 - <strong>SOMETHING ELSE</strong></label>
+                <input type="file" name="image5" accept="image/png, image/jpeg" required>
+            </fieldset>
 
-                <br>
+            <br>
 
-                <p style="text-align:center">
-                    <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;">Submit</button><br>
-                    <button type="button" style="color: #fff; background-color: #E90202; border-radius: 0.5rem; border-style: solid; border-color: #E90202; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
-                </p>
-            </form>
-            <br><br>
-            <script>
-            var allTeams = [];
+            <p style="text-align:center">
+                <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;">Submit</button><br>
+                <button type="button" style="color: #fff; background-color: #E90202; border-radius: 0.5rem; border-style: solid; border-color: #E90202; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+            </p>
+        </form>
+        <br><br>
+        <script>
+        var allTeams = [];
 
-            async function getEventTeams() {
-                const xhr = new XMLHttpRequest();
-                xhr.open("GET", `/api/events/${document.getElementById('eventCode').value}/teams`, true);
-                xhr.withCredentials = true;
+        async function getEventTeams() {
+            const xhr = new XMLHttpRequest();
+            xhr.open("GET", `/api/events/${document.getElementById('eventCode').value}/teams`, true);
+            xhr.withCredentials = true;
 
-                xhr.onreadystatechange = async () => {
-                if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                    console.log("200 ok")
-                    console.log(xhr.responseText)
-                    allTeams = (xhr.responseText).split(",")
-                } else if (xhr.status === 401) {
-                    console.log("401 failure")
-                    window.location.href = "/login";
-                } else if (xhr.status === 400) {
-                    console.log("400 failure")
-                    document.getElementById("viewNoteButton").innerHTML = "400 Bad Request";
-                } else if (xhr.status === 500) {
-                    console.log("500 failure")
-                } else if (xhr.status === 403) {
-                    console.log("403 failure")
-                } else {
-                    console.log("awaiting response")
-                }
-                }
-
-                xhr.send()
+            xhr.onreadystatechange = async () => {
+            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+                console.log("200 ok")
+                console.log(xhr.responseText)
+                allTeams = (xhr.responseText).split(",")
+            } else if (xhr.status === 401) {
+                console.log("401 failure")
+                window.location.href = "/login";
+            } else if (xhr.status === 400) {
+                console.log("400 failure")
+                document.getElementById("viewNoteButton").innerHTML = "400 Bad Request";
+            } else if (xhr.status === 500) {
+                console.log("500 failure")
+            } else if (xhr.status === 403) {
+                console.log("403 failure")
+            } else {
+                console.log("awaiting response")
+            }
             }
 
-            getEventTeams()
+            xhr.send()
+        }
 
-            document.getElementById('eventCode').addEventListener('change', async function(){console.log(getEventTeams()); console.log(allTeams)});
+        getEventTeams()
 
-            document.getElementById('validateTeamInput').addEventListener('input', function(event){
-                console.log("event!")
-                if (allTeams.includes(document.getElementById('validateTeamInput').value)) {
-                    console.log("good boy")
-                    document.getElementById('invalidTeamInput').style.display = "none";
-                    document.getElementById('submitButton').disabled = "false";
-                } else {
-                    console.log("bad bad bad boy")
-                    document.getElementById('invalidTeamInput').style.display = "inherit";
-                    document.getElementById('submitButton').disabled = "true";
-                }
-            });
-                function goToHome() {
-                    window.location.href = "/";
-                }
-            </script>
-</body>
+        document.getElementById('eventCode').addEventListener('change', async function(){console.log(getEventTeams()); console.log(allTeams)});
 
+        document.getElementById('validateTeamInput').addEventListener('input', function(event){
+            console.log("event!")
+            if (allTeams.includes(document.getElementById('validateTeamInput').value)) {
+                console.log("good boy")
+                document.getElementById('invalidTeamInput').style.display = "none";
+                document.getElementById('submitButton').disabled = "false";
+            } else {
+                console.log("bad bad bad boy")
+                document.getElementById('invalidTeamInput').style.display = "inherit";
+                document.getElementById('submitButton').disabled = "true";
+            }
+        });
+            function goToHome() {
+                window.location.href = "/";
+            }
+        </script>
+    </body>
 </html>
