--- a/src/scouts.html
+++ b/src/scouts.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 
-<body id="body" class="dark-mode" onload="getTeamRanks()">
+<body class="dark-mode" onload="getTeamRanks()">
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: flex;"> <!--flex is shown-->
         <form>
