--- a/src/teams.html
+++ b/src/teams.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: flex;"> <!--flex is shown-->
         <form>
