--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: flex;"> <!--flex is shown-->
         <form>
