Revert "sanitize everything"
This reverts commit 6c5cb09b7800ebfae0be9ec53a556518491b61b8.

--- a/src/main.html
+++ b/src/main.html
@@ -89,7 +89,7 @@
             <!--INPUT TO SET FOR GRID DATA-->
             <input value="000000000000000000000000000" type="number" name="game12" id="griddata" hidden>
             <br><label><strong class="vstrong">During AUTO, the robot...</strong></label>
-            <fieldset>
+            <fieldset><br>
                 <input value="true" type="checkbox" name="game1" class="checkbig"><span>&emsp;Completely left COMMUNITY<br></span><br>
                 <input value="true" type="checkbox" name="game2" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
                 <input value="true" type="checkbox" name="game3" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
@@ -134,7 +134,7 @@
             <p><strong>Bottom of grid</strong></p>
         </fieldset>
         <br><label><strong class="vstrong">During TELEOP, the robot...</strong></label>
-        <fieldset>
+        <fieldset><br>
             <input value="true" type="checkbox" name="game6" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
             <input value="true" type="checkbox" name="game7" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
             <input value="true" type="checkbox" name="game8" class="checkbig"><span>&emsp;Scored on a top ROW<br></span><br>
