add/modify back functions

--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -49,5 +49,10 @@
         </div>
     </div>
     <script src="assets/blackjack.js"></script>
+    <script>
+        function goToHome() {
+            window.location.href = "/points";
+        }
+    </script>
 </body>
 </html>
