--- a/src/spin.html
+++ b/src/spin.html
@@ -106,6 +106,9 @@
                 xhr.send()
             }
         }
+        function goToHome() {
+            window.location.href = "/points";
+        }
     </script>
 </body>
 </html>
