--- a/src/plinko.html
+++ b/src/plinko.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="float.min.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="apple-touch-startup-image" href="public/launch.png">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js" crossorigin="anonymous" integrity="sha256-vfaOKX1sTshbjdaTuHgdmdsAkEScmjummUju3gjJJ1o="></script>
     <style>
         body {
             padding: 0;
